[gd_scene load_steps=2 format=2]

[ext_resource path="res://Work Order System/WorkOrderSystem.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Directions" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 376.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="DirectionLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 168.0
margin_right = -506.0
margin_bottom = -218.0
text = "Directions:"

[node name="FromLocation" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 400.0
margin_bottom = 64.0

[node name="ToLocation" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 88.0
margin_right = 400.0
margin_bottom = 112.0

[node name="ToLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 110.0
text = "To:"
align = 2

[node name="FromLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 62.0
text = "From:"
align = 2

[node name="DirectionButton" type="Button" parent="."]
margin_left = 296.0
margin_top = 128.0
margin_right = 401.0
margin_bottom = 148.0
text = "Get Directions"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="DirectionButton" to="." method="_on_DirectionButton_pressed"]
